// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="false"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-font-size-lg"
      >
        Please select a option...
      </p>
      <svg
        class="dse-select__caret dse-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay "
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select component snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-font-size-lg"
      >
        Please select a option...
      </p>
      <svg
        class="dse-select__caret dse-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay dse-select__overlay--open"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select component snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="false"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-font-size-lg"
      >
        Heavenly Green
      </p>
      <svg
        class="dse-select__caret dse-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay "
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-checked="true"
        aria-label="Heavenly Green"
        class="dse-select__option dse-select__option--select
            dse-select__option--hightlighted
            }"
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Heavenly Green
        </p>
        <svg
          class="h-6 w-6"
          fill="none"
          height="1rem"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13l4 4L19 7"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </li>
      <li
        aria-label="Sweet Pink"
        class="dse-select__option 
            
            }"
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-font-size-md"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
